@@ -1,3 +1,9 @@
+2003-05-14  Akinori Ito <aito@fw.ipsj.or.jp>
+
+	* [w3m-dev 03898] Re: table rendering
+	* table.c (check_relative_width): added
+		(set_table_matrix): use check_relative_width
+
 2003-05-13  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03896] html_quote in textarea in frame
@@ -7809,4 +7815,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.835 2003/05/12 16:33:16 ukai Exp $
+$Id: ChangeLog,v 1.836 2003/05/13 17:08:19 ukai Exp $
